# gol-tui

./: .gitignore  LICENSE  README.md  configure  flake.nix  gol-tui.buildinfo.in  gol-tui.cabal
cmake/: CMakeLists.txt
src/: Game.hs  Main.hs  game.hpp
